--- a/web/deploy/nginx/nginx.conf
+++ b/web/deploy/nginx/nginx.conf
@@ -34,9 +34,13 @@ server {
         add_header Cache-Control "public, immutable";
     }
 
+    # Docker DNS resolver - use Docker's internal DNS
+    resolver 127.0.0.11 valid=30s ipv6=off;
+
     # API 代理（如果需要）
-    location /api {
-        proxy_pass http://leaf-api:8888;
+    location /api/ {
+        set $backend_host leaf-api:8888;
+        proxy_pass http://$backend_host/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -50,9 +54,11 @@ server {
 
     # 文件上传代理
     location /uploads {
-        proxy_pass http://leaf-api:8888;
+        set $backend_host leaf-api:8888;
+        proxy_pass http://$backend_host/uploads;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        client_max_body_size 10M;
     }
 
     # SPA 路由支持 - 所有路由都返回 index.html
