更新文章列表按照条件排序

--- a/deploy/nginx/production.conf
+++ b/deploy/nginx/production.conf
@@ -28,7 +28,9 @@ server {
     }
 
     # API 代理到后端 /blog/* 路径
-    location /blog/ {
+    location /api/ {
+        # 将 /api/xxx 重写为 /blog/xxx
+        rewrite ^/api/(.*)$ /blog/$1 break;
         proxy_pass http://127.0.0.1:8888;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
