--- a/blog-frontend/deploy/nginx/nginx.conf
+++ b/blog-frontend/deploy/nginx/nginx.conf
@@ -34,8 +34,10 @@ server {
         add_header Cache-Control "public, immutable";
     }
 
-    # API 代理（如果需要）
-    location /api {
+    # API 代理 - 博客前端使用 /api/* 代理到后端 /blog/*
+    location /api/ {
+        # 将 /api/xxx 重写为 /blog/xxx
+        rewrite ^/api/(.*)$ /blog/$1 break;
         proxy_pass http://leaf-api:8888;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
