--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,8 @@
 
 # Dependency directories (remove the comment below to include it)
 vendor/
-
+blog-frontend/node_modules/
+web/node_modules/
 # Go workspace file
 go.work
 
